# t-bot

./: .gitignore  README.md  docker-compose.yaml  main.py  pyproject.toml
agents/datacollector/: data_collector.py
agents/strategy/: strategy_agent.py
agents/universe/: universe_agent.py
data/: access_token.json  universe_map.json
pkg/config/: config_loader.py  settings.yaml
pkg/database/: db_connector.py
pkg/redis/: redis_client.py
pkg/zerodha/: client.py
